--- a/R-Clases/week-2/clase_10/01_random_forest.Rmd
+++ b/R-Clases/week-2/clase_10/01_random_forest.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Random Forest Loan"
+title: "Random Forest Loan Challenge"
 author: "Anderson Ocaña"
 date: "`r Sys.Date()`"
 output: html_document
