--- a/R-Clases/week-3/01_ProyectoPython/python_colab_notebook/02_telco_challenge_modeling.ipynb
+++ b/R-Clases/week-3/01_ProyectoPython/python_colab_notebook/02_telco_challenge_modeling.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "173845a8",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1afa1f14",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fb9c412a",
    "metadata": {},
    "outputs": [],
@@ -190,14 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8787cdec",
    "metadata": {},
    "outputs": [],
    "source": [
     "churn_objetct = ChurnDatabase(\"../database/telco_customer_churn.sqlite.db\")\n",
     "churn = churn_objetct.get_churn_analysis_data()\n",
-    "churn.head()"
+    "churn[['gender', 'SeniorCitizen', 'Partner', 'Dependents', 'tenure',\n",
+    "       'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity',\n",
+    "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
+    "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
+    "       'MonthlyCharges', 'TotalCharges']][churn[\"Churn\"] == 1].head().to_csv(\"test.csv\")"
    ]
   },
   {
